--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -79,7 +79,7 @@
         //     htmlLabels:true
         //   }
         // };
-        mermaid.initialize({ startOnLoad: false, securityLevel: "strict", theme: "neutral" });
+        mermaid.initialize({ startOnLoad: false, securityLevel: "strict", theme: "default" });
         window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
 
       })
